board layout completed

--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
 
 <body>
     <div id="container">
-        <div id="leftContainer">
-            <div id="clear">clear</div>
-        </div>
         <div id="numbersContainer"></div>
-        <div id="operators">
+        <!-- <div id="operators">
             <div id="add">add</div>
             <div id="subtract">subtract</div>
             <div id="multiply">multiply</div>
             <div id="divide">divide</div>
-        </div>
+        </div> -->
     </div>
 </body>
 
