coded functions and commented out logic that didn't work

--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
     <title>calculator</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <div id="container">
+        <div id="numberScreen"></div>
         <div id="numbersContainer"></div>
-        <!-- <div id="operators">
-            <div id="add">add</div>
-            <div id="subtract">subtract</div>
-            <div id="multiply">multiply</div>
-            <div id="divide">divide</div>
-        </div> -->
     </div>
 </body>
 
